Fix - better treatment to promotion